@@ -55,7 +55,7 @@ ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 	testr init
 	set -e ; \
 		TEMP_REZ=`mktemp -t` ; \
-		bash -x ./setup-test-env-mongodb.sh testr run --subunit 'aodh\.tests\.unit\.(?!.*test_bin.*)' | tee $$TEMP_REZ | subunit2pyunit ; \
+		bash -x ./debian/setup-test-env-mongodb.sh testr run --subunit 'aodh\.tests\.unit\.(?!.*test_bin.*)' | tee $$TEMP_REZ | subunit2pyunit ; \
 		cat $$TEMP_REZ | subunit-filter -s --no-passthrough | subunit-stats ; \
 		rm -f $$TEMP_REZ ;
 	testr slowest
