@@ -3,6 +3,7 @@ aodh (2.0.0~b3-1) experimental; urgency=medium
   * New upstream release.
   * Fixed (build-)depends for this release.
   * Fixed path of tests when running testr run.
+  * Using script in debian to start mongo.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 03 Mar 2016 23:37:27 +0800
 
